# PaleoSampling

./: .all-contributorsrc  .buildinfo  .gitignore  CITATION.cff  LICENSE  Main.html  Main.ipynb  Makefile  Parallel.ipynb  README.html  README.md  Sampling_comparision.ipynb  Sampling_example.ipynb  Visualization.ipynb  _config.yml  _toc.yml  environment.yml  genindex.html  index.html  objects.inv  search.html  searchindex.js
_sources/: README.md
book/: Main.html  Main.ipynb  installation.html  installation.md  intro.html  intro.md  references.bib
figures/: Figure1.ipynb  Figure2.ipynb  Figure3_heatmap.ipynb  Figure3_hist.ipynb  Figure3_intersection.ipynb  Figure_3_asterix.ipynb
notebooks/: DIY-Figure1.html  DIY-Figure1.ipynb  Parallel.html  Parallel.ipynb  Sampling_comparision.html  Sampling_comparision.ipynb  Sampling_comparison.html  Sampling_comparison.ipynb  Sampling_example.html  Sampling_example.ipynb
outputs/: fig1a_10000sim_summary.csv  fig2a_2000sim_summary.csv  fig2ab_2000sim_summary.csv  fig2b_5000sim_summary.csv  fig2cd_2000sim_summary.csv  fig3_1000sim_Lean_100_one_site_vandamme.csv  fig3a_df1.csv  fig3a_df2.csv  fig3a_df_false.csv  fig3a_df_true.csv  fig3a_df_vandamme.csv  fig3b_df1.csv  (+12 more)
smpsite/: setup.cfg  setup.py
smpsite/smpsite/: __init__.py  estimate.py  kappa.py  sampling.py  theoretical.py
smpsite/smpsite/kappa_tabular/: create_table.py  kappa2angular.csv  kappa_table.html  kappa_table.ipynb
smpsite/smpsite/test/: test_estimate.py  test_execution.py  test_sampling.py  test_theoretical.py
smpsite/smpsite/test/data/: df1.csv
(+27 files in other folders)
