# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = smpsite
version          = attr: smpsite.__version__
author           = Facundo Sapienza
author_email     = fsapienza@berkeley.edu
description      = A Python library to sample directional data
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, paleomagnetism
license          = BSD 3-Clause License
classifiers      =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 3.6,
install_requires =
    tqdm

[options.packages.find]
exclude =
    examples*
    docs*